--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,14 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.11.0</version>
 		</dependency>
+		
+		<!-- JSON 변환 -->
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.13.2</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
